Bust some github CDN caching

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
   <title>Rick Fletcher</title>
 
   <link rel="canonical" href="https://flet.ch/resume" />
-  <link rel="stylesheet" href="../assets/css/resume.css" />
+  <link rel="stylesheet" href="../assets/css/resume.css?v=20250124" />
 
   <script>
     // quick and dirty contact info obfuscation.
