Better resume title

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Rick Fletcher</title>
+  <title>Rick Fletcher - Resume</title>
 
   <link rel="canonical" href="https://flet.ch/resume" />
   <link rel="stylesheet" href="../assets/css/resume.css?v=20250124" />
