More Duo description

--- a/resume/index.html
+++ b/resume/index.html
@@ -150,6 +150,11 @@
               </ul>
             </li>
             <li>
+              Application of GitOps and configuration-as-code principles
+              throughout, including thorough validation in CI, and delivery
+              with tools like ArgoCD and Terraform.
+            </li>
+            <li>
               Streamlined developer experience, providing tools and services to
               reduce toil and improve development security and efficiency.
             </li>
