Minor resume change

--- a/resume/index.html
+++ b/resume/index.html
@@ -235,23 +235,6 @@
               Formalized infrastructure management using Terraform and Puppet.
             </li>
             <li>
-              Designed systems to allow incremental change during architectural
-              transitions<span class="for-print">.</span><span class="for-screen">,
-              such as:</span>
-              <ul class="for-screen">
-                <li>
-                  A web proxy which intelligently routed requests to one of two
-                  backend applications, as a new app was built out, slowly
-                  replacing old.
-                </li>
-                <li>
-                  A secrets provider capable of propagating secrets as
-                  environmental variables to legacy application servers running
-                  Tomcat, and as Secret resources in Kubernetes.
-                </li>
-              </ul>
-            </li>
-            <li>
               Analyzed and reduced AWS spending by 30%, even as demand doubled.
             </li>
             <li class="for-screen">
@@ -265,6 +248,23 @@
               Partnered with engineering teams to instill best practices,
               deliver new services, and establish/support their participation in
               the on-call rotation.
+            </li>
+            <li>
+              Designed systems to allow incremental change during architectural
+              transitions<span class="for-print">.</span><span class="for-screen">,
+              such as:</span>
+              <ul class="for-screen">
+                <li>
+                  A web proxy which intelligently routed requests to one of two
+                  backend applications based on response code, as a new app was
+                  built out, slowly replacing old.
+                </li>
+                <li>
+                  A secrets provider capable of propagating secrets as
+                  environmental variables to legacy application servers running
+                  Tomcat, and as Secret resources in Kubernetes.
+                </li>
+              </ul>
             </li>
           </ul>
         </section>
